--- a/YourasMusic/nbproject/project.properties
+++ b/YourasMusic/nbproject/project.properties
@@ -30,12 +30,15 @@ dist.jar=${dist.dir}/YourasMusic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ojdbc6_g.jar=..\\..\\..\\..\\NetBeans\\ojdbc6_g.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.ojdbc6_g.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
