--- a/YourasMusic/nbproject/project.properties
+++ b/YourasMusic/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ojdbc7.jar=/home/pedro/Documentos/ojdbc7.jar
+file.reference.ojdbc7.jar-1=C:\\Users\\HP\\Desktop\\Escola\\NetBeans\\ojdbc7.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -37,6 +38,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.ojdbc7.jar}:\
+    ${file.reference.ojdbc7.jar-1}:\
     ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
