--- a/YourasMusic/nbproject/project.properties
+++ b/YourasMusic/nbproject/project.properties
@@ -29,19 +29,17 @@ dist.jar=${dist.dir}/YourasMusic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jl1.0.jar=C:\\Users\\HP\\Desktop\\Escola\\NetBeans\\jl1.0.jar
+file.reference.jl1.0.jar-1=/home/pedro/Documentos/jl1.0.jar
 file.reference.ojdbc7.jar=/home/pedro/Documentos/ojdbc7.jar
-file.reference.ojdbc7.jar-1=C:\\Users\\HP\\Desktop\\Escola\\NetBeans\\ojdbc7.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.ojdbc7.jar}:\
-    ${file.reference.ojdbc7.jar-1}:\
+    ${file.reference.jl1.0.jar-1}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.jl1.0.jar}
+    ${file.reference.ojdbc7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
