--- a/YourasMusic/nbproject/project.properties
+++ b/YourasMusic/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/YourasMusic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jl1.0.jar-1=/home/pedro/Documentos/jl1.0.jar
+file.reference.jl1.0.jar=/home/pedro/Documentos/jl1.0.jar
 file.reference.ojdbc7.jar=/home/pedro/Documentos/ojdbc7.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -37,11 +37,11 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.jl1.0.jar-1}:\
+    ${file.reference.jl1.0.jar}:\
     ${file.reference.ojdbc7.jar}:\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
