--- a/YourasMusic/nbproject/private/private.properties
+++ b/YourasMusic/nbproject/private/private.properties
@@ -4,10 +4,10 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.jl1.0.jar=C:\\Users\\HP\\Desktop\\Escola\\NetBeans\\jl1.0.jar
-file.reference.ojdbc7.jar=C:\\Users\\HP\\Desktop\\Escola\\NetBeans\\ojdbc7.jar
+file.reference.jl1.0.jar=/home/pedro/Documentos/jl1.0.jar
+file.reference.ojdbc7.jar=/home/pedro/Documentos/ojdbc7.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
-user.properties.file=C:\\Users\\HP\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/pedro/.netbeans/8.2/build.properties
